<resources>
    <string name="app_name">FragmentTransaction</string>

    <string name="frag1">Fragment 1</string>
    <string name="frag2">Fragment 2</string>
    <string name="frag3">Fragment 3</string>
    <string name="frag4">Fragment 4</string>

    <string name="heading">This is Activity 1</string>
    <string name="heading1">This is Fragment 1</string>
    <string name="heading2">This is Fragment 2</string>
    <string name="heading3">This is Fragment 3</string>
    <string name="heading4">This is Fragment 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
